--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- 所有 meta 标签放在一起 -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="canonical" href="https://XXX.github.io/XXX/">
+    <link rel="canonical" href="https://gift-aha.github.io/knowledge-base3/">
     <meta name="description" content="思维协同处理器 - 个人知识管理与思维模型构建工具，帮助你结构化思考、管理认知模型、建立个人知识体系">
     <meta name="keywords" content="知识管理,思维模型,认知工具,个人成长,思维训练">
     <meta name="author" content="Aha">
@@ -16,12 +16,12 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="思维协同处理器">
     <meta name="twitter:description" content="强大的个人知识管理工具">
-    <meta name="twitter:image" content="https://XXX.github.io/XXX/og-image.png">
+    <meta name="twitter:image" content="https://gift-aha.github.io/knowledge-base3/og-image.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://XXX.github.io/XXX-base2/">
+    <meta property="og:url" content="https://gift-aha.github.io/knowledge-base3-base2/">
     <meta property="og:title" content="思维协同处理器">
     <meta property="og:description" content="强大的个人知识管理工具">
-    <meta property="og:image" content="https://XXX.github.io/XXX/og-image.png">  
+    <meta property="og:image" content="https://gift-aha.github.io/knowledge-base3/og-image.png">  
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta name="format-detection" content="telephone=no">
