--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
 
     <!-- JavaScript 文件 -->
     <script src="script.js"></script>
+    <script src="mobile-config.js"></script>
     <script src="mobile.js"></script>
     <script src="data-sync.js"></script>
     
