--- a/text.html
+++ b/text.html
@@ -5,8 +5,8 @@
 </head>
 <body>
     <h1>脚本加载诊断</h1>
-    <div id="result"></div>
-    
+    <div id="result"></div> 
+    <script src="script.js"></script>
     <script>
         function diagnoseScriptLoading() {
             const result = document.getElementById('result');
